@@ -90,6 +90,7 @@ glibc (2.5-10) UNRELEASED; urgency=low
   * arm/cvs-procinfo-eabi.diff: patch from CVS to not include asm/procinfo.h.
   * any/submitted-strtok.diff: new patch to fix a typo in strings/strtok.c.
     Closes: #426118.
+  * debian/sysdeps/depflags.pl: depends on libgcc1/libgcc2/libgcc4.
 
   [ Clint Adams ]
   * debian/local/manpages/ld.so.8: quote accepted values for LD_DEBUG.
@@ -97,7 +98,7 @@ glibc (2.5-10) UNRELEASED; urgency=low
   * New Malayalam debconf translation, by Sajeev പിആര്‍.  closes:
     #426203.
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 30 May 2007 10:47:17 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 30 May 2007 13:40:55 +0200
 
 glibc (2.5-9) unstable; urgency=low
 
